исправляет ошибки по дз-3

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!--Ссылки на почту и телефон-->
             <ul class="list header-contacts">
-                <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-contacts-container"><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
@@ -97,32 +97,32 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="team-item">
-                    <div class="team-item-container">
-                        <img class="team-item-image" src="./images/person1.jpg" alt="Игорь Демьяненко" width="270">
-                        <h3 class="team-item-title">Игорь Демьяненко</h3>
-                        <p class="team-item-text" lang="en">Product Designer</p>
-                    </div>
+                    <img class="team-item-image" src="./images/person1.jpg" alt="Игорь Демьяненко" width="270">
+                        <div class="team-item-container">
+                            <h3 class="team-item-title">Игорь Демьяненко</h3>
+                            <p class="team-item-text" lang="en">Product Designer</p>
+                        </div>
                 </li>
                 <li class="team-item">
-                    <div class="team-item-container">
-                        <img class="team-item-image" src="./images/person2.jpg" alt="Ольга Репина" width="270">
-                        <h3 class="team-item-title">Ольга Репина</h3>
-                        <p class="team-item-text" lang="en">Frontend Developer</p>
-                    </div>
+                    <img class="team-item-image" src="./images/person2.jpg" alt="Ольга Репина" width="270">
+                        <div class="team-item-container">
+                            <h3 class="team-item-title">Ольга Репина</h3>
+                            <p class="team-item-text" lang="en">Frontend Developer</p>
+                        </div>
                 </li>
                 <li class="team-item">
-                    <div class="team-item-container">
-                        <img class="team-item-image" src="./images/person3.jpg" alt="Николай Тарасов" width="270">
-                        <h3 class="team-item-title">Николай Тарасов</h3>
-                        <p class="team-item-text" lang="en">Marketing</p>
-                    </div>
+                    <img class="team-item-image" src="./images/person3.jpg" alt="Николай Тарасов" width="270">
+                        <div class="team-item-container">
+                            <h3 class="team-item-title">Николай Тарасов</h3>
+                            <p class="team-item-text" lang="en">Marketing</p>
+                        </div>
                 </li>
                 <li class="team-item">
-                    <div class="team-item-container">
-                        <img class="team-item-image" src="./images/person4.jpg" alt="Михаил Ермаков" width="270">
-                        <h3 class="team-item-title">Михаил Ермаков</h3>
-                        <p class="team-item-text" lang="en">UI Designer</p>
-                    </div>
+                    <img class="team-item-image" src="./images/person4.jpg" alt="Михаил Ермаков" width="270">
+                        <div class="team-item-container">
+                            <h3 class="team-item-title">Михаил Ермаков</h3>
+                            <p class="team-item-text" lang="en">UI Designer</p>
+                        </div>
                 </li>
             </ul>
             </div>
@@ -134,8 +134,8 @@
         <!--Логотип-->
         <div class="container">
         <a class="link footer-logo" href=""><span class="web">Web</span>Studio</a>
-        <address>
-            <ul class="list footer-list">
+        <address class="footer-list">
+            <ul class="list">
                 <li><a class="link footer-map" href="https://goo.gl/maps/VZW6j8tTsUU3PeiP6" target="_blank" rel="noopner norefferer">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
