--- a/portfolio.html
+++ b/portfolio.html
@@ -20,20 +20,21 @@
     <header class="header">
         <!--Навигация на другие страницы-->
         <div class="container header-container">
-        <nav class="header-nav">
-            <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
-            <ul class="list header-list">
-                <li class="header-list-container"><a class="link header-item" href="./index.html">Студия</a></li>
-                <li class="header-list-container"><a class="link header-item current" href="">Портфолио</a></li>
-                <li class="header-list-container"><a class="link header-item" href="">Контакты</a></li>
-            </ul>
-        </nav>
+            <nav class="header-nav">
+                <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
+                <ul class="list header-list">
+                    <li class="header-list-container"><a class="link header-item current" href="">Студия</a></li>
+                    <li class="header-list-container"><a class="link header-item" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header-list-container"><a class="link header-item" href="">Контакты</a></li>
+                </ul>
+            </nav>
     
-        <!--Ссылки на почту и телефон-->
-        <ul class="list header-contacts">
-            <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+            <!--Ссылки на почту и телефон-->
+            <ul class="list header-contacts">
+                <li class="header-contacts-container"><a class="link header-mail"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </div>
     </header>
 
@@ -66,103 +67,86 @@
         <h2 class="nav-examples-title visually-hidden">Навигация по фотопримерам работ</h2>
         <ul class="list nav-examples-list">
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio1.jpg" alt="Экран ноутбука" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Технокряк</h3>
                             <p class="nav-examples-item-text">Веб-сайт</p>
                         </div>
-                    </a> 
-                </div>
+                </a> 
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio2.jpg" alt="Баскетболисты" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Постер New Orlean vs Golden Star</h3>
                             <p class="nav-examples-item-text">Дизайн</p>
                         </div>
-                    </a> 
-                </div>
+                </a> 
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio3.jpg" alt="Логотип ресторана" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Ресторан Seafood</h3>
                             <p class="nav-examples-item-text">Приложение</p>
                         </div>
-                    </a>
-                </div>
+                </a>
+                
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio4.jpg" alt="Наушники" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Проект Prime</h3>
                             <p class="nav-examples-item-text">Маркетинг</p>
                         </div>
-                    </a> 
-                </div>
+                </a>                
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio5.jpg" alt="Коробки" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Проект Boxes</h3>
                             <p class="nav-examples-item-text">Приложение</p>
                         </div>
-                    </a>
-                </div>
+                </a>
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio6.jpg" alt="Экран мионитора" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Inspiration has no Borders</h3>
                             <p class="nav-examples-item-text">Веб-сайт</p>
                         </div>
-                    </a> 
-                </div>
+                </a> 
             </li>
-            <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+            <li class="nav-examples-item">                
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio7.jpg" alt="Раскрытая книга" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Издание Limited Edition</h3>
                             <p class="nav-examples-item-text">Дизайн</p>
                         </div>
-                    </a>  
-                </div>
+                </a>  
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio8.jpg" alt="Ярлык" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Проект LAB</h3>
                             <p class="nav-examples-item-text">Маркетинг</p>
                         </div>
-                    </a> 
-                </div>
+                </a> 
             </li>
             <li class="nav-examples-item">
-                <div class="nav-examples-item-container">
-                    <a class="link" href="">
+                <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio9.jpg" alt="Фото ноутбука" width="370">
                         <div class="nav-examples-container">
                             <h3 class="nav-examples-item-title">Growing Business</h3>
                             <p class="nav-examples-item-text">Приложение</p>
                         </div>
-                    </a>
-                </div>
+                </a>
             </li>
         </ul>
         </div>
@@ -174,15 +158,15 @@
     <footer class="footer">
         <!--Логотип-->
         <div class="container">
-        <a class="link footer-logo" href=""><span class="web">Web</span>Studio</a>
-        <address>
-            <ul class="list footer-list">
-                <li><a class="link footer-map" href="https://goo.gl/maps/VZW6j8tTsUU3PeiP6" target="_blank"
-                        rel="noopner norefferer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+            <a class="link footer-logo" href=""><span class="web">Web</span>Studio</a>
+            <address class="footer-list">
+                <ul class="list">
+                    <li><a class="link footer-map" href="https://goo.gl/maps/VZW6j8tTsUU3PeiP6" target="_blank"
+                            rel="noopner norefferer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
         </div>
     </footer>
 
